force-app/main/default/objects/ZRH_DiccionarioEquivalencias__mdt/ZRH_DiccionarioEquivalencias__mdt.object-meta.xml
<CustomObject>
    <label>Diccionario de Equivalencias</label>
    <pluralLabel>Diccionario de Equivalencias</pluralLabel>
</CustomObject>