force-app/main/default/objects/ZRH_DiccionarioEquivalencias__mdt/fields/ZRH_Campo__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Campo__c</fullName>
    <label>Campo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>