force-app/main/default/objects/ZRH_DiccionarioEquivalencias__mdt/fields/ZRH_Objeto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Objeto__c</fullName>
    <label>Objeto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>