force-app/main/default/objects/ZRH_DiccionarioEquivalencias__mdt/fields/ZRH_Servicio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Servicio__c</fullName>
    <label>ZRH Ruta Integracion</label>
    <referenceTo>ZRH_RutaIntegracion__mdt</referenceTo>
    <relationshipLabel>Diccionario de Equivalencias</relationshipLabel>
    <relationshipName>DiccionarioEquivalencias</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>