force-app/main/default/objects/ZRH_DiccionarioEquivalencias__mdt/fields/ZRH_ValorAS400__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorAS400__c</fullName>
    <label>Valor AS400</label>
    <length>80</length>
    <type>Text</type>
</CustomField>