force-app/main/default/objects/ZRH_DiccionarioEquivalencias__mdt/fields/ZRH_ValorSalesforce__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorSalesforce__c</fullName>
    <label>Valor Salesforce</label>
    <length>80</length>
    <type>Text</type>
</CustomField>